--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <form action="#">
         <div class="elements">
             <h1>Contact With Us</h1>
-            <input type="text" name="" id="" placeholder="Name">
-            <input type="email" name="" id="" placeholder="Email">
-            <input type="number" name="" id="" placeholder="Phone Number">
-            <input type="password" name="" id="" placeholder="Password">
+            <input type="text" id="name" placeholder="Name" required>
+            <input type="email" id="email" placeholder="Email" required>
+            <input type="number" id="phone" placeholder="Phone Number" required>
+            <input type="password" id="password" placeholder="Password" required>
+            <textarea required id="message" rows="4" placeholder="Type your message..."></textarea>
+            <button type="submit">Send Email</button>
         </div>
     </form>
 </body>
