--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <form action="#">
+    <form onsubmit="sendEmail(); reset(); return false()">
         <div class="elements">
             <h1>Contact With Us</h1>
             <input type="text" id="name" placeholder="Name" required>
@@ -16,8 +16,29 @@
             <input type="number" id="phone" placeholder="Phone Number" required>
             <input type="password" id="password" placeholder="Password" required>
             <textarea required id="message" rows="4" placeholder="Type your message..."></textarea>
-            <button type="submit">Send Email</button>
+            <button type="submit">Send Message</button>
         </div>
     </form>
+
+    <script src="https://smtpjs.com/v3/smtp.js">
+        function sendEmail(){
+            Email.send({
+                Host : "smtp.gmail.com",
+                Username : "joijoi505060@gmail.com",
+                Password : "nmkiguj89452535$%$#$#",
+                To : 'joijoi505060@gmail.com',
+                From : document.getElementById("email").value,
+                Subject : "New Contact Form Enquiry",
+                Body : "Name: " + document.getElementById("name").value
+                + "<br> Email: " + document.getElementById("email").value
+                + "<br> Phone number: " + document.getElementById("phone").value
+                + "<br> message: " + document.getElementById("message").value
+            }).then(
+            message => alert("Message sent successfully")
+            );
+        }
+    </script>
+
+
 </body>
 </html>
